# C-Projects--CoinFlip

./: CMakeLists.txt  Mainwindow.h  main.cpp  mainscene.cpp  mainscene.ui  res.qrc  xx.rc
myWidgets/ChooseLevelScene/: chooselevelscene.cpp  chooselevelscene.h  chooselevelscene.ui
myWidgets/dataConfig/: dataconfig.cpp  dataconfig.h
myWidgets/myCoin/: mycoin.cpp  mycoin.h  mycoin.ui
myWidgets/myPushButton/: mypushbutton.cpp  mypushbutton.h  mypushbutton.ui
myWidgets/playScene/: playScene.cpp  playScene.h  playScene.ui
